--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
 <body>
   <script src="flutter.js" defer></script>
   <script>
+    // Proactively unregister any existing service workers to avoid stale caching issues
+    (function unregisterSW() {
+      if ('serviceWorker' in navigator) {
+        try {
+          navigator.serviceWorker.getRegistrations().then(function(regs) {
+            regs.forEach(function(reg) { try { reg.unregister(); } catch (_) {} });
+          }).catch(function(_){});
+        } catch (_) {}
+      }
+    })();
+  </script>
+  <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
@@ -44,10 +56,17 @@
           serviceWorkerVersion: null,
         },
         onEntrypointLoaded: function(engineInitializer) {
-          // Let Flutter auto-select the best renderer (HTML/CanvasKit)
-          // Avoid forcing HTML, which can cause issues on some Safari builds
-          engineInitializer.initializeEngine().then(function(appRunner) {
+          // Force HTML renderer for maximum compatibility on iOS Safari
+          engineInitializer.initializeEngine({ renderer: 'html' }).then(function(appRunner) {
             appRunner.runApp();
+          }).catch(function(e){
+            console.error('Flutter engine init failed:', e);
+            try {
+              var el = document.createElement('pre');
+              el.style.cssText = 'position:fixed;inset:0;z-index:9999;background:#111;color:#eee;padding:16px;overflow:auto;';
+              el.textContent = 'Failed to start app.\\n' + (e && (e.stack || e.message || e.toString()));
+              document.body.appendChild(el);
+            } catch(_) {}
           });
         }
       });
